--- a/WebGUI/html/widgets/gauge_widget.html
+++ b/WebGUI/html/widgets/gauge_widget.html
@@ -11,6 +11,13 @@
 			  	font: 10px arial;
 			}
 
+			.wrapper {
+			  display: grid;
+			  grid-template-columns: repeat(2, 1fr);
+			  grid-gap: 10px;
+			  grid-auto-rows: minmax(100px, auto);
+			}
+
 		</style>
 
 		<script type="text/javascript" src="libraries/d3.js"></script>
@@ -41,88 +48,48 @@
 				guages_settings = settings;
 			}
 
+			var widget_;
+			var parameters_;
 			function newWidget(widget, parameters) 
-			{		
-				var table = document.createElement('table');
-				table.id = "display-table";
-				table.style.height = "100%";
-				table.style.width = "100%";
+			{
+				widget_ = widget;
+				parameters_ = parameters;
+				var olddiv = document.getElementById("dispaly-div");
+				if (olddiv != null)
+					document.getElementById("display").removeChild(olddiv);
 
-				var counter = 0;
-				for(var pv in widget.PVList)
-				{
-					counter++;
-				}
-
-				var rows = Math.round(Math.sqrt(counter));
-				var columns = Math.ceil(counter / rows);
-
-				for(var col = 1; col <= columns; col++)
-				{
-					var tr = document.createElement('tr');
-					tr.id = "tr" + col;
-
-					for(var cell = 1; cell <= rows; cell++)
-					{
-						var td = document.createElement('td');
-						td.id = "td" + col + "-" + cell;
-						var tr1 = document.createElement('tr');
-						tr1.id = "tr-1" + td.id;
-						var tr2 = document.createElement('tr');
-						tr2.id = "tr-2" + td.id;
-						td.appendChild(tr1);
-						td.appendChild(tr2);
-						tr.appendChild(td);
-					}
-					table.appendChild(tr);
-				}
-				document.getElementById("display").innerHTML = "";
-				document.getElementById("display").appendChild(table);
-
-				if(counter > 1){counter = 2;}
+				var div = document.createElement('div');
+				div.className="wrapper";
+				div.id = "dispaly-div";
+				document.getElementById("display").appendChild(div);
 				var pv_number = 0;
-				console.log("counter" + counter);
 				for(var pv in widget.PVList)
 				{
-					var first = Math.floor(counter/columns);
-					if(first < 1) {first = 1;}	
+					var divtemp = document.createElement('div');
+					divtemp.style.color = "white";
+					divtemp.style.fontSize = "4vw";
+					divtemp.innerHTML = pv;
+					divtemp.id = "gauge-div-" + pv_number;
+					divtemp.style.width = "100%";
+					divtemp.style.height = "100%";
+					div.appendChild(divtemp);
 
-					//Create Span for pv name Container
-					var pvSpan = document.createElement('span');
-					pvSpan.id = "td" + first + "-" + (counter%rows + 1) + "-GuageContainer-title";
-					pvSpan.title = pv;
-					pvSpan.style.color = "white";
-					pvSpan.style.marginRight = "5px";
+					//var max_size = Math.min(window.innerHeight, window.innerWidth) / Math.max(rows, columns);
+					var max_size = Math.min(window.innerHeight, window.innerWidth) / Object.keys(widget.PVList).length;
 
-					pvSpan.innerHTML = pv;
-					document.getElementById("tr-1td" + first + "-" + (counter%rows + 1)).appendChild(pvSpan);
-
-					//Create Span for Guage Container
-					var span = document.createElement('span');
-					span.id = "td" + first + "-" + (counter%rows + 1 ) + "-GuageContainer";
-					span.title = pv;
-					console.log("td" + first + "-" + (counter%rows + 1));
-					document.getElementById("tr-2td" + first + "-" + (counter%rows + 1)).appendChild(span);
-
-					var max_size = Math.min(window.innerHeight, window.innerWidth) / Math.max(rows, columns);
-
-					console.log("Gauge pv: " + guages_settings[pv]);
-					console.log("Gauge Units: " + guages_settings[pv].Units);
-					console.log("Gauge lower disp limit: " + guages_settings[pv].Lower_Display_Limit);
-
-					var label = guages_settings[pv].Units;// == "" ? pv : guages_settings[pv].Units;
-					var min   = guages_settings[pv].Lower_Display_Limit == "DC'd" ? 0 : parseInt(guages_settings[pv].Lower_Display_Limit);
-					var max   = parseInt(guages_settings[pv].Upper_Display_Limit);
+					var label = guages_settings[pv] !== undefined ? guages_settings[pv].Units : "";
+					var min   = guages_settings[pv] !== undefined ? guages_settings[pv].Lower_Display_Limit !== "DC'd" ? parseInt(guages_settings[pv].Lower_Display_Limit) : 0 : 0;
+					var max   = guages_settings[pv] !== undefined ? guages_settings[pv].Upper_Display_Limit !== "DC'd" ? parseInt(guages_settings[pv].Upper_Display_Limit) : 0 : 0;
 					max = max == "DC'd" || max <= min ? 100 : max;
 
-					console.log("Gauge: " + pv + "(" + pv_number + ") : " + label +"," + min +"," + max +".");
-					console.log("Gauge: " + pv + "(" + pv_number + ") : " + parameters["label_" + pv_number] + "," + parameters["min_" + pv_number] + "," + parameters["max_" + pv_number] +".");
+					console.log("Gauge pv: " + guages_settings[pv]);
+					console.log("Gauge: " + pv + "(" + pv_number + ") : " + label +"," + min +"," + max + ".");
+					console.log("Gauge: " + pv + "(" + pv_number + ") : " + parameters["label_" + pv_number] + "," + parameters["min_" + pv_number] + "," + parameters["max_" + pv_number] + ".");
 
-					createGauge(pv, span.id, label, min, max, max_size)
-
-					counter++;
+					createGauge(pv, divtemp.id, label, min, max, max_size);
 					pv_number++;
 				}
+				console.log(document.body);
 			}
 
 			function getParameters()
@@ -133,23 +100,14 @@
 				{
 					parameters["label_" + i] = "";
 					parameters["min_" + i]   = "";
-					parameters["max_" + i]   = "";			
+					parameters["max_" + i]   = "";
 				}
-				console.log(parameters);	
+				console.log(parameters);
 				return parameters;
 			}
 
 			function newValue(pvName, pvValue, pvTime, pvStatus, pvSeverity)
 			{
-
-				/*if(document.getElementById(pvName) == null)
-				{
-					var div = document.createElement('div');
-					var a = document.createElement('a');
-					a.id = pvName;
-					div.appendChild(a);
-					document.getElementById("display").appendChild(div);
-				}*/
 				console.log("Gauge newValue() reached", pvName, pvValue);
 				gauges[pvName].redraw(pvValue);
 
@@ -227,14 +185,13 @@
 				createGauge("memory", "Memory");
 				createGauge("cpu", "CPU");
 				createGauge("network", "Network");
-				//createGauge("test", "Test", -50, 50 );
 			}
 
 			function updateGauges()
 			{
 				for (var key in gauges)
 				{
-					var value = getRandomValue(gauges[key])
+					var value = getRandomValue(gauges[key]);
 					gauges[key].redraw(value);
 				}
 			}
@@ -242,7 +199,7 @@
 			function getRandomValue(gauge)
 			{
 				var overflow = 0; //10;
-				return gauge.config.min - overflow + (gauge.config.max - gauge.config.min + overflow*2) *  Math.random();
+				return gauge.config.min - overflow + (gauge.config.max - gauge.config.min + overflow*2) * Math.random();
 			}
 
 			function initialize()
@@ -250,6 +207,20 @@
 				createGauges();
 				//setInterval(updateGauges, 5000);
 			}
+
+			window.onresize = function() {
+				for(var name in gauges)
+				{
+					var width = (parseInt(window.innerWidth) - 16) / Object.keys(gauges).length | 0;
+					var height = (parseInt(window.innerHeight) - 16) / Object.keys(gauges).length | 0;
+
+					gauges[name].config.size = Math.min(window.innerHeight, window.innerWidth) / Object.keys(gauges).length | 0;
+					gauges[name].configure(gauges[name].config);
+					//gauges[name].redraw(50);
+					newWidget(widget_, parameters_);
+				}
+				console.log("gauge: window.onresize()");
+			};
 
 		</script>
 
