--- a/WebGUI/html/widgets/gauge_widget.html
+++ b/WebGUI/html/widgets/gauge_widget.html
@@ -64,18 +64,18 @@
 				document.getElementById("display").appendChild(div);
 				var pv_number = 0;
 				for(var pv in widget.PVList)
-				{
+				{   
 					var divtemp = document.createElement('div');
 					divtemp.style.color = "white";
-					divtemp.style.fontSize = "4vw";
-					divtemp.innerHTML = pv;
+					divtemp.style.fontSize = "auto";
+					divtemp.innerHTML = "<p id='p-" + pv + "'>" + pv + "</p>";
 					divtemp.id = "gauge-div-" + pv_number;
 					divtemp.style.width = "100%";
 					divtemp.style.height = "100%";
 					div.appendChild(divtemp);
 
 					//var max_size = Math.min(window.innerHeight, window.innerWidth) / Math.max(rows, columns);
-					var max_size = Math.min(window.innerHeight, window.innerWidth) / Object.keys(widget.PVList).length;
+					var max_size = Math.min(window.innerHeight - 60, window.innerWidth) / Object.keys(widget.PVList).length;
 
 					var label = guages_settings[pv] !== undefined ? guages_settings[pv].Units : "";
 					var min   = guages_settings[pv] !== undefined ? guages_settings[pv].Lower_Display_Limit !== "DC'd" ? parseInt(guages_settings[pv].Lower_Display_Limit) : 0 : 0;
@@ -109,6 +109,8 @@
 			function newValue(pvName, pvValue, pvTime, pvStatus, pvSeverity)
 			{
 				console.log("Gauge newValue() reached", pvName, pvValue);
+				var pv="p-" + pvName;
+				document.getElementById(pv).innerHTML = pvName + "<br>Status: " + pvStatus + "<br>Severity: " + pvSeverity;
 				gauges[pvName].redraw(pvValue);
 
 //				document.getElementById(pvName).innerHTML = (pvValue);// + " @ " + pvTime);
@@ -211,10 +213,7 @@
 			window.onresize = function() {
 				for(var name in gauges)
 				{
-					var width = (parseInt(window.innerWidth) - 16) / Object.keys(gauges).length | 0;
-					var height = (parseInt(window.innerHeight) - 16) / Object.keys(gauges).length | 0;
-
-					gauges[name].config.size = Math.min(window.innerHeight, window.innerWidth) / Object.keys(gauges).length | 0;
+					gauges[name].config.size = Math.min(window.innerHeight - 60, window.innerWidth) / Object.keys(gauges).length | 0;
 					gauges[name].configure(gauges[name].config);
 					//gauges[name].redraw(50);
 					newWidget(widget_, parameters_);
