--- a/WebGUI/html/Visualization-complexLayout.html
+++ b/WebGUI/html/Visualization-complexLayout.html
@@ -23,16 +23,13 @@
  </head>
 
  <body>
-  <div id="sourcesDiv">                </div>
-  <div id="west" class="x-hide-display"></div>
-  <div id="center2" class="x-hide-display">
-  </div>
+  <div id="sourcesDiv"                    ></div>
+  <div id="west"    class="x-hide-display"></div>
+  <div id="center2" class="x-hide-display"></div>
 
-      <a id="hideit" href="#"> <--> </a>
-  <div id="props-panel" class="x-hide-display" style="width:200px;height:200px;overflow:hidden;">
-  </div>
-  <div id="south" class="x-hide-display">
+  <div id="south"   class="x-hide-display">
       <p>General information regarding files or plots</p>
   </div>
+
  </body>
 </html>
