A pretty decent version: the new canvasModel class works smoothly. To do: fix the enlarge option in JSRootPaint.js at line 2508

--- a/WebGUI/html/Visualization-complexLayout.html
+++ b/WebGUI/html/Visualization-complexLayout.html
@@ -12,9 +12,35 @@
   <script  src="../js/Debug.js"   			                                        type="text/javascript"                  ></script>
   <script  src="../js/visualizers_lib/ViewerRoot.js"   			                        type="text/javascript"                  ></script>
   <script  src="../js/visualizers_lib/ViewerRoot_lib/ViewerRootHud.js"   	                type="text/javascript"                  ></script>
+<!--
+  <script  src="../js/visualizers_lib/ViewerRoot_lib/JsRoot/scripts/ThreeCSG.js                 type="text/javascript"                  ></script>
+  <script  src="../js/visualizers_lib/ViewerRoot_lib/JsRoot/scripts/three.extra.min.js"         type="text/javascript"                  ></script>
+  <script  src="../js/visualizers_lib/ViewerRoot_lib/JsRoot/scripts/three.min.js"               type="text/javascript"                  ></script>
+  <script  src="../js/visualizers_lib/ViewerRoot_lib/JsRoot/scripts/touch-punch.min.js"         type="text/javascript"                  ></script>
+-->
   <script  src="../js/visualizers_lib/ViewerRoot_lib/JsRoot/scripts/JSRootCore.js?2d&hierarchy" type="text/javascript"                  ></script> 
   <script  src="../js/visualizers_lib/ViewerRoot_lib/JsRoot/scripts/d3.min.js"                  type="text/javascript"                  ></script>
   <script  src="../js/visualizers_lib/ViewerRoot_lib/JsRoot/scripts/JSRootPainter.js"           type="text/javascript"                  ></script>
+  <script  src="../js/visualizers_lib/ViewerRoot_lib/JsRoot/scripts/JSRootPainter.hierarchy.js" type="text/javascript"                  ></script>
+<!--
+  <script  src="../js/visualizers_lib/ViewerRoot_lib/JsRoot/scripts/JSRootTree.js"              type="text/javascript"                  ></script>
+  <script  src="../js/visualizers_lib/ViewerRoot_lib/JsRoot/scripts/JSRoot3DPainter.js"         type="text/javascript"                  ></script>
+  <script  src="../js/visualizers_lib/ViewerRoot_lib/JsRoot/scripts/JSRootGeoBase.js"           type="text/javascript"                  ></script>
+  <script  src="../js/visualizers_lib/ViewerRoot_lib/JsRoot/scripts/JSRootGeoPainter.js"        type="text/javascript"                  ></script>
+  <script  src="../js/visualizers_lib/ViewerRoot_lib/JsRoot/scripts/JSRootGeoWorker.js"         type="text/javascript"                  ></script>
+  <script  src="../js/visualizers_lib/ViewerRoot_lib/JsRoot/scripts/JSRootIOEvolution.js"       type="text/javascript"                  ></script>
+  <script  src="../js/visualizers_lib/ViewerRoot_lib/JsRoot/scripts/JSRootMath.js"              type="text/javascript"                  ></script>
+  <script  src="../js/visualizers_lib/ViewerRoot_lib/JsRoot/scripts/JSRoot.openui5.js"          type="text/javascript"                  ></script>
+  <script  src="../js/visualizers_lib/ViewerRoot_lib/JsRoot/scripts/JSRootPainter.hierarchy.js" type="text/javascript"                  ></script>
+  <script  src="../js/visualizers_lib/ViewerRoot_lib/JsRoot/scripts/JSRootPainter.hist3d.js"    type="text/javascript"                  ></script>
+  <script  src="../js/visualizers_lib/ViewerRoot_lib/JsRoot/scripts/JSRootPainter.hist.js"      type="text/javascript"                  ></script>
+  <script  src="../js/visualizers_lib/ViewerRoot_lib/JsRoot/scripts/JSRootPainter.jquery.js"    type="text/javascript"                  ></script>
+  <script  src="../js/visualizers_lib/ViewerRoot_lib/JsRoot/scripts/JSRootPainter.more.js"      type="text/javascript"                  ></script>
+  <script  src="../js/visualizers_lib/ViewerRoot_lib/JsRoot/scripts/JSRootPainter.v6.js"        type="text/javascript"                  ></script>
+  <script  src="../js/visualizers_lib/ViewerRoot_lib/JsRoot/scripts/JSRootPainter.v7hist.js"    type="text/javascript"                  ></script>
+  <script  src="../js/visualizers_lib/ViewerRoot_lib/JsRoot/scripts/JSRootPainter.v7.js"        type="text/javascript"                  ></script>
+  <script  src="../js/visualizers_lib/ViewerRoot_lib/JsRoot/scripts/JSRootPainter.v7more.js"    type="text/javascript"                  ></script>
+-->
   <script  src="../js/themeSelector.js"   			                                type="text/javascript"                  ></script>
 
   <script  src="../js/STDLINE.js"   			                                        type="text/javascript"                  ></script>
